--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
       href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
     />
 
-    <title>HKIRS 學生平台</title>
+    <title>HKIRS 師生平台</title>
   </head>
   <body>
     <noscript> You need to enable JavaScript to run this app. </noscript>
